# karabiner-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/karabiner_mcp/: __init__.py  __main__.py  config.py  server.py
src/karabiner_mcp/service/: compiler.py  ir.py  karabiner.py  keycodes.py
src/karabiner_mcp/tools/: keycodes.py  profiles.py  rules.py
tests/: conftest.py  test_keycodes_tool.py  test_profiles.py  test_rules.py
